RFC: Enforce DL_LIBS value instead of hard coded -ldl
Generated makefiles would ignore DL_LIBS value selected by configure
script and use the hard coded value -ldl. Generated makefiles will
now use DL_LIBS.

Refs: #1165

Signed-off-by: Yannick Lamarre <ylamarre@efficios.com>

--- a/src/common/testpoint/Makefile.am
+++ b/src/common/testpoint/Makefile.am
@@ -1,4 +1,4 @@
 noinst_LTLIBRARIES = libtestpoint.la
 
 libtestpoint_la_SOURCES = testpoint.h testpoint.c
-libtestpoint_la_LIBADD = -ldl
+libtestpoint_la_LIBADD = $(DL_LIBS)
