--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,8 +1,8 @@
 SUBDIRS =
-DIST_SUBDIRS = utils unit regression stress destructive perf
+DIST_SUBDIRS = utils unit regression stress destructive perf fuzz
 
 if BUILD_TESTS
-SUBDIRS += . utils unit regression stress destructive perf
+SUBDIRS += . utils unit regression stress destructive perf fuzz
 if HAVE_PGREP
 check-am:
 	$(top_srcdir)/tests/utils/warn_processes.sh $(PGREP)
